--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -3,15 +3,15 @@ layout: default
 title: Stuff
 ---
 <h3>Book a week</h3>
-
-Here is my book a week project. Week 1 starts on the week starting the 14th of May.
+<br>
+So, for some reason I decided to try reading a book every week of the upcoming year. Yeah, I probably won't manage, but why not try? So, to motivate myself, here is a website logging my progress. I may be ahead of schedule, I may be behind schedule. We will see what happens. I hereby wish myself luck.
 <br>
 
 <table border="1" cellpadding="1" cellspacing="1" width=700 style='table-layout:fixed'>
- <col width=30>
- <col width=170>
- <col width=400>
- <col width=100>
+ <col width=26>
+ <col width=174>
+ <col width=410>
+ <col width=90>
 	<tr>
 		<td>W</td>
 		<td>Book</td>
@@ -21,31 +21,31 @@ Here is my book a week project. Week 1 starts on the week starting the 14th of M
 	<tr>
 		<td valign="top">1</td>
 		<td valign="top">Walter Isaacson:<br>"Steve Jobs"</td>
-		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top">I am, by no means, much of a fan of Apple or Apple-products. However, this was a really interesting read. There are some parts, or rather a specific chunk, of this book I found to be really boring, but it was more than worth going through for the sake of the rest. No matter what one may think of him, Steve Jobs was an extremely influential person in the consumer electronics-market. As well as giving what seems like a very honest description of the kind of person Steve Jobs was, this book also gives a fascinating insight in how Apple operates, why it does what it does, and why that has made the company so successful. 4/5</td>
 		<td valign="top" style="background-color:#00FF00;">20-05-12</td>
 	</tr>
 	<tr>
 		<td valign="top">2</td>
 		<td valign="top">Agatha Christie:<br>"The Big Four"</td>
-		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top">Part of my mission to read all the Christie-books, this is a Poirot mystery. Here Hercule takes on a case which turns out to be of, without exaggerating, global importance. This makes this book somewhat different in style to the standard "a guy has been killed by poison in his hot chocolate" kind of story. Not one of my favourites by Christie, but still a worthwhile read. 3.5/5</td>
 		<td valign="top" style="background-color:#00FF00;">27-05-12</td>
 	</tr>
 	<tr>
 		<td valign="top">3</td>
 		<td valign="top">Muriel Barbery:<br>"The Elegance of the Hedgehog"</td>
-		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top">This book was absolutely brilliant. Translated from French, it initially seemed like a somewhat pretentious, overly philosophical book. However, after the first few chapters it had really reeled me in, and I was hooked. Yes, there is a lot of philosophy contained in this book, but not for its own sake. The book never gets too fond of itself, and the "artsy" parts of the book are more than justified by the story it tells, which turned out to be extremely gripping. One page would have me laughing out loud, the next page would make me feel genuinely sad. Yes, the setting may be a tad contrived, but... did I mention it is a brilliant story? Highly recommended. 5/5</td>
 		<td valign="top" style="background-color:#00FF00;">03-06-12</td>
 	</tr>
 	<tr>
 		<td valign="top">4</td>
 		<td valign="top">Oscar Wilde:<br>"The Picture of Dorian Gray"</td>
-		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top">Well, what is there to say? A classic, and the first Wilde-book I have read. Not only is it a classic, but I had been told it was one of the classics that stands the test of time very well. I found this to be partially true. A lot of the time, especially during the first half of the book, I found myself getting a bit bored. Sure, there were a lot of thoughtful quotes and a lot of "deep" things are said. Keeping in mind that this was written and published in the eighteen hundreds, the book must have been extremely progressive at the time, and a lot of things are said which one can only imagine would have been very controversial at the time. However, I'm reading this book in 2012, and that is how I am judging it. Fortunately, as the story progresses, the story itself takes more of the focus, and I found myself going back to being genuinely interested in it. Overall the book pretty much matched my expectations, and I'd say it is well worth a read. Its entertaining enough to be worth it, and of course, when one finds onself in sophisticated company one is able to say "Why, yes. <i>Of course</i> I've read The Picture of Dorian Gray. Who hasn't?"</td>
 		<td valign="top">10-06-12</td>
 	</tr>
 	<tr>
 		<td valign="top">5</td>
 		<td valign="top">'Alan Partridge':<br>"I, Partridge: We Need To Talk About Alan"</td>
-		<td valign="top">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis mi diam, ac rutrum elit. Fusce orci nisi, iaculis non auctor in, adipiscing sit amet risus. Nulla tincidunt tincidunt mollis. Sed enim est, ultricies non feugiat molestie, pellentesque in dui. Vestibulum at velit non nibh rhoncus sagittis. Proin magna mauris, mollis non dapibus ut, dictum vitae nisl. Sed et orci nunc, sit amet fringilla leo. Integer lacus eros, cursus eget tincidunt eu, tempor at nisi. Phasellus at lectus vitae odio malesuada egestas.</td>
+		<td valign="top">This is a mock-biography by Steve Coogan and Armando Iannucci, written in the voice of Alan Partridge. I should start by saying, I love Alan Partridge. While I was sceptical to how entertaining I would find this genre, I had high hopes. This book has really good reviews, and, after all, Armando Iannucci writes "The Thick of It". I, Partridge didn't live up to my expectations. It's an entertaining read, but it does drag on a bit, and some chapters are a lot better than others. There are some really funny parts, some great one-liners and very entertaining situations, but nothing that made me feel like I had to turn the page to read on. Perhaps I expected too much. Still a decent read, but not as good as I think it could have been. 3.5/5</td>
 		<td valign="top">17-06-12</td>
 	</tr>
 </table>
