--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -9,7 +9,7 @@ So, for some reason I decided to try reading a book every week of the upcoming y
 <br>
 <br>
 
-<table border="1" cellpadding="3" cellspacing="2" width=800 style='table-layout:fixed background-color:#FFFFCC'>
+<table border="1" cellpadding="3" cellspacing="2" width=800 style='table-layout:fixed' style='background-color:#BDBDBD'>
  <col width=26>
  <col width=174>
  <col width=510>
@@ -23,7 +23,7 @@ So, for some reason I decided to try reading a book every week of the upcoming y
 	<tr>
 		<td valign="top">1</td>
 		<td valign="top">Walter Isaacson:<br>"Steve Jobs"</td>
-		<td valign="top">I am, by no means, much of a fan of Apple or Apple-products. However, this was a really interesting read. There are some parts, or rather a specific chunk, of this book I found to be really boring, but it was more than worth going through for the sake of the rest. No matter what one may think of him, Steve Jobs was an extremely influential person in the consumer electronics-market. As well as giving what seems like a very honest description of the kind of person Steve Jobs was, this book also gives a fascinating insight in how Apple operates, why it does what it does, and why that has made the company so successful. 4/5</td>
+		<td valign="top">I am by no means much of a fan of Apple or Apple-products. However, this was a really interesting read. There are some parts, or rather a specific chunk, of this book I found to be really boring, but it was more than worth going through for the sake of the rest. No matter what one may think of him, Steve Jobs was an extremely influential person in the consumer electronics-market. As well as giving what seems like a very honest description of the kind of person Steve Jobs was, this book also gives a fascinating insight in how Apple operates, why it does what it does, and why that has made the company so successful. 4/5</td>
 		<td valign="top" style="background-color:#00FF00;">20-05-12</td>
 	</tr>
 	<tr>
