--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -9,7 +9,7 @@ So, for some reason I decided to try reading a book every week of the upcoming y
 <br>
 <br>
 
-<table border="1" cellpadding="3" cellspacing="2" width=800 style='table-layout:fixed' style='background-color:#BDBDBD'>
+<table border="1" cellpadding="3" cellspacing="2" width=800 style='table-layout:fixed' bgcolor='#BDBDBD'>
  <col width=26>
  <col width=174>
  <col width=510>
