--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -5,7 +5,9 @@ title: Stuff
 <h3>Book a week</h3>
 <table border="0" cellpadding="3" cellspacing="2">
 	<tr>
-		<td valign="top">So, for some reason I decided to try reading a book every week of the upcoming year. I know, I probably won't manage, but why not try? So, to motivate myself, here is a website logging my progress. I may be ahead of schedule, I may be behind schedule. We will see what happens. I hereby wish myself luck.</td>
+		<td valign="top">So, for some reason I decided to try reading a book every week of the upcoming year. I know, I probably won't manage, but why not try? So, to motivate myself, here is a website logging my progress. I may be ahead of schedule, I may be behind schedule. We will see what happens. I hereby wish myself luck.<br><br>
+        Week 1 started on the week beginning the 14th of May 2012. The goal is to have read 52 books by... well, 52 weeks on from the 14th of May.<br>
+        </td>
 		<td><div id="w5997dc585dc8e8e3e799f8a00b0d7016"></div><script type="text/javascript" charset="UTF-8" src="http://www.librarything.com/widget_get.php?userid=clq&theID=w5997dc585dc8e8e3e799f8a00b0d7016"></script><noscript><a href="http://www.librarything.com/profile/clq">My Library</a> at <a href="http://www.librarything.com">LibraryThing</a></noscript></td>
 	</tr>
 
