--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -49,7 +49,7 @@ title: Stuff
 		<td valign="top">4</td>
 		<td valign="top">Oscar Wilde:<br>"The Picture of Dorian Gray"</td>
 		<td valign="top">Well, what is there to say? A classic, and the first Wilde-book I have read. Not only is it a classic, but I had been told it was one of the classics that stands the test of time very well. I found this to be partially true. A lot of the time, especially during the first half of the book, I found myself getting a bit bored. Sure, there were a lot of thoughtful quotes, and a lot of "deep" things are said. Keeping in mind that this was written and published in the eighteen hundreds, the book must have been extremely progressive at the time, and a lot of things are said which one can only imagine would have been very controversial. However, I'm reading this book in 2012, and that is how I am judging it. Fortunately, as the story progresses, the story itself takes more of the focus, and I found myself going back to taking an interest in it. Overall the book pretty much matched my expectations, and I'd say it is well worth a read. It's entertaining enough to be worth it, and of course, when one finds onself in sophisticated, educated company one can be one of those people who say "Why, yes. <i>Of course</i> I've read The Picture of Dorian Gray. Who hasn't?" 4/5</td>
-		<td valign="top">10-06-12</td>
+		<td valign="top" style="background-color:#00FF00;">10-06-12</td>
 	</tr>
 	<tr>
 		<td valign="top">5</td>
