--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -76,3 +76,8 @@ title: Stuff
 		<td valign="top">08-07-12</td>
 	</tr>
 </table>
+<br> <br>
+And, to make sure I don't cheat myself with reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. <br>
+Total pages read: 2839 <br>
+Total books read: 8 <br>
+Average page-count: 355
