--- a/fw.html
+++ b/fw.html
@@ -5,18 +5,18 @@
     width: 55px;
     text-align: center; 
     font-family: Arial; 
-    font-size: 28px;
+    font-size: 80px;
     font-weight: bold;    /* options are normal, bold, bolder, lighter */
     font-style: normal;   /* options are normal or italic */
-    color: #ffffff;       /* change color using the hexadecimal color codes for HTML */
+    color: #FFFF00;       /* change color using the hexadecimal color codes for HTML */
 }
 .title {		/* the styles below will affect the title under the numbers, i.e., "Days", "Hours", etc. */
     width: 55px;
     text-align: center; 
     font-family: Arial; 
-    font-size: 10px;
+    font-size: 80px;
     font-weight: bold;    /* options are normal, bold, bolder, lighter */
-    color: #dddddd;       /* change color using the hexadecimal color codes for HTML */
+    color: #FFFF00;       /* change color using the hexadecimal color codes for HTML */
 }
 #table {
     width: 400px;
@@ -101,7 +101,7 @@ function countdown(yr,m,d,hr,min){
 </script>
 
 </head>
-<body onload="countdown(year,month,day,hour,minute)">
+<body onload="countdown(year,month,day,hour,minute)" bgcolor="#000000">
 <table id="table" border="0" cellpadding="0" cellspacing="0">
     <tr>
         <td align="center" colspan="6"><div class="numbers" id="count2" style="padding: 5px 0 0 0; "></div></td>
