Updated book a week.

--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -61,7 +61,7 @@ title: Stuff
 		<td valign="top">6</td>
 		<td valign="top">Lionel Shriver:<br>"We Need To Talk About Kevin"</td>
 		<td valign="top">I recently saw the film of this book, and I loved it. Even though plot-spoilers are thrown around rather liberally with regards to the story, I'll avoid them here. The story follows Eva, a mother who has ended up in a terrible situation. The film had me feeling desperately sorry for Eva throughout, so this is pretty much what I expected from the book. The book turned out to be more complicated, and rather than seeming to explicitly control the feelings of the reader, the reader is more open to feel what they like. More than a few times this had me wondering if I was supposed to be thinking what I thought, and whether my emotions were 'correct'. The story is told through the letters Eva writes to her husband, and she isn't looking for pity, nor making excuses. We follow Eva's train of thought as she tries to de-construct the terrible thing that has happened. Yes, I did feel very sorry for Eva, but I also found myself wondering along with her whether she actually could have done anything differently. Whether, or to what extent, she is to blame. Without asking questions directly, the book planted plenty. To what extent can parents affect who a child ends up being? How responsible is one for the actions of ones children? This is a good story, and it is told very cleverly. It was different from what I expected having watched the film, but not in a bad way. 4/5 </td>
-		<td valign="top">24-06-12</td>
+		<td valign="top" style="background-color:#00FF00;">24-06-12</td>
 	</tr>
     	<tr>
 		<td valign="top">7</td>
@@ -81,9 +81,15 @@ title: Stuff
 		<td valign="top">Having read the Narnia-books before, when I was very young, I've been re-reading them in published order. This is the fifth of the seven books. Save for the Lion The Witch and the Wardrobe, this is my favourite books of the chronicles so far. It reads like a fairy-tale, and I found myself mentally reading it out loud to myself rather than just reading it. Sure, it is a little childish at times, but I still found this book to be very enjoyable, even at 23. 4/5 </td>
 		<td valign="top">15-07-12</td>
 	</tr>
+    	<tr>
+		<td valign="top">10</td>
+		<td valign="top">Jo Nesb&oslash:<br>"Hodejegerne"</td>
+		<td valign="top">The English translation of this book, "Headhunders", has been on the bestseller-lists in the UK for quite a while. Also, I wanted to read this book before watching the film of it. However, having read Nesb&oslash before, and not quite liking it, I was a little sceptical. Fortunately I liked Hodejegerne better, perhaps partly because it doesn't include Harry Hole, the recurring character in quite a few of the other books, and a character I never quite liked. Hodejegerne is very original, both in its story, and in the way the story unfolds. The thing that bothered me throughout the book was the fact that I just didn't believe a lot of what was happening. At some point almost all of the main characters make choices which seem more than a little contrived. Still, this is a quick, rather fast-paced, sometimes genuinely thrilling, book. Worth a read. 4/5 </td>
+		<td valign="top">22-07-12</td>
+	</tr>
 </table>
 <br> <br>
-And, to make sure I don't cheat myself with reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. <br>
-Total pages read: 3063 <br>
-Total books read: 9 <br>
-Average page-count: 340
+And, to make sure I don't cheat myself with reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. Since I mostly read e-books, I'm basing these on page-counts from goodreads.com.<br>
+Total pages read: 3302 <br>
+Total books read: 10 <br>
+Average page-count: 330
