Updated book a week.

--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -67,7 +67,7 @@ title: Stuff
 		<td valign="top">7</td>
 		<td valign="top">J. A Lees and W. J. Clutterbuck:<br>"Three in Norway, By Two of Them"</td>
 		<td valign="top">For years my mother has kept saying "You should read this book", and for years I've been meaning to read it. So, being at home on holidays, I took the battered, older-than-myself, obviously well-read edition of this book off the shelf and got on with it. It is a travel-diary first published in 1882. Yes, <i>eighteen</i> hundred and eighty-two. The age of it is part of what makes it rather remarkable. It follows three Britons on their adventures fishing and hunting in the desolate mountains of Norway. It's written in a very dry, very funny, and very British style, and makes a number of rather witty observations about the Norwegian way of life, Norwegian nature and Norwegian people. The interesting thing is how many of these observations I find myself being able to relate to today, over a hundred years later. I really enjoyed the book and laughed out loud quite a few times reading it. Though, I'm probably biased. A rather entertaining read. 4/5 </td>
-		<td valign="top">01-07-12</td>
+		<td valign="top" style="background-color:#00FF00;">01-07-12</td>
 	</tr>
     	<tr>
 		<td valign="top">8</td>
@@ -87,9 +87,15 @@ title: Stuff
 		<td valign="top">The English translation of this book, "Headhunters", has been on the bestseller-lists in the UK for quite a while. Also, I wanted to read this book before watching the film of it. However, having read Nesb&oslash before, and not quite liking it, I was a little sceptical. Fortunately I liked Hodejegerne better, perhaps partly because it doesn't include Harry Hole, the recurring character in quite a few of the other books, and a character I never quite liked. Hodejegerne is very original, both in its story, and in the way the story unfolds. The thing that bothered me throughout the book was the fact that I just didn't believe a lot of what was happening. At some point almost all of the main characters make choices which seem more than a little contrived. Still, this is a quick, rather fast-paced, sometimes genuinely thrilling, book. Worth a read. 4/5 </td>
 		<td valign="top">22-07-12</td>
 	</tr>
+    	<tr>
+		<td valign="top">11</td>
+		<td valign="top">Agatha Christie:<br>"The Mystery of the Blue Train"</td>
+		<td valign="top">Another Hercule Poirot story, and a relatively standard mystery. A woman gets killed. On a train of course. Who did it? The husband? The lover? The Butler? Who knows? Well, Poirot does. Not one of the best Christie's I've read, nor very original. Still, this book isn't bad. It continues to impress me how well Christie does dialouge. Even long-winded conversations between characters (of which there are quite a few in this book) somehow stay interesting and entertaining, yet plausable. I've come to expect that an Agatha Christie-book will keep me happy for the time it takes me to read it, and this one did. Just. 3.5/5 </td>
+		<td valign="top">29-07-12</td>
+	</tr>
 </table>
 <br> <br>
 And, to make sure I don't cheat myself with reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. Since I mostly read e-books, I'm basing these on page-counts from goodreads.com.<br>
-Total pages read: 3302 <br>
-Total books read: 10 <br>
-Average page-count: 330
+Total pages read: 3619 <br>
+Total books read: 11 <br>
+Average page-count: 329
