Updated book a week.

--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -90,7 +90,7 @@ title: Stuff
     	<tr>
 		<td valign="top">11</td>
 		<td valign="top">Agatha Christie:<br>"The Mystery of the Blue Train"</td>
-		<td valign="top">Another Hercule Poirot story, and a relatively standard mystery. A woman gets killed. On a train of course. Who did it? The husband? The lover? The Butler? Who knows? Well, Poirot does. Not one of the best Christie's I've read, nor very original. Still, this book isn't bad. It continues to impress me how well Christie does dialouge. Even long-winded conversations between characters (of which there are quite a few in this book) somehow stay interesting and entertaining, yet plausable. I've come to expect that an Agatha Christie-book will keep me happy for the time it takes me to read it, and this one did. Just. 3.5/5 </td>
+		<td valign="top">Another Hercule Poirot story, and a relatively standard mystery. A woman gets killed. On a train of course. Who did it? The husband? The lover? The Butler? Who knows? Well, Poirot does. Not one of the best Christie's I've read, nor very original. Still, this book isn't bad. It continues to impress me how well Christie does dialogue. Even long-winded conversations between characters (of which there are quite a few in this book) somehow stay interesting and entertaining, yet plausible. I've come to expect that an Agatha Christie-book will keep me happy for the time it takes me to read it, and this one did. Just. 3.5/5 </td>
 		<td valign="top">29-07-12</td>
 	</tr>
 </table>
