--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -73,13 +73,13 @@ title: Stuff
 		<td valign="top">8</td>
 		<td valign="top">R.D. Wingfield:<br>"Frost At Christmas"</td>
 		<td valign="top">This is the first book about Inspector Jack Frost, the source-material for the tv-series "A Touch of Frost". The book is considerably darker than what I recall the series being, and Jack is portrayed as a less likable character, but in the "you wouldn't expect like him, but you can't stop yourself from taking his side anyway"-antihero kind of way. The problem is that this is done without any subtlety, which got rather annoying after a while. Frost will be excessively obnoxious in a childish way, but a few pages later something is done or said that redeems him. The gradual revealing of Frost's intriguing, dark, history (because every conflicted detective needs one) seems forced, as if it was inserted into the book wherever an excuse could be found to fit it in. All that aside, this is a decent crime-mystery. The main plot is quite good, and the story held up better than I thought it would. Unfortunately there are also a lot of distracting elements. Among them are more than a few sexually themed asides, which purposefully border on what would be considered legally or morally acceptable. In some places it is relevant and justified by the story, but elsewhere it seems to be used, excessively, to build under the already artificial-seeming 'dark' mood and tone of the story. Still though, this is a good detective-story, but it could probably have been told a bit better. 3.5/5 </td>
-		<td valign="top">08-07-12</td>
+		<td valign="top" style="background-color:#00FF00;">08-07-12</td>
 	</tr>
     	<tr>
 		<td valign="top">9</td>
 		<td valign="top">C. S. Lewis:<br>"The Horse and His Boy"</td>
 		<td valign="top">Having read the Narnia-books before, when I was very young, I've been re-reading them in published order. This is the fifth of the seven books. Save for the Lion The Witch and the Wardrobe, this is my favourite books of the chronicles so far. It reads like a fairy-tale, and I found myself mentally reading it out loud to myself rather than just reading it. Sure, it is a little childish at times, but I still found this book to be very enjoyable, even at 23. 4/5 </td>
-		<td valign="top">15-07-12</td>
+		<td valign="top" style="background-color:#00FF00;">15-07-12</td>
 	</tr>
     	<tr>
 		<td valign="top">10</td>
