Added new book, also new quotes.

--- a/stuff/quotes.html
+++ b/stuff/quotes.html
@@ -84,5 +84,10 @@ Words without thoughts never to heaven go.
 What a beautiful sight in his wild blue dream, the eternal child leafs through his war magazines. And his kind Uncle Sam feeds ten trillion in change into the total entertainment combat video game. (...) See the children bleed. It'll look great on the TV.
 </blockquote>
 <cite>"Late Home Tonight" from "Amused to Death" by Roger Waters</cite>
+
+<blockquote>
+ A sleeping man is selfishly regardless of the disquiet he brings on his fellow-creatures. 
+</blockquote>
+<cite>From "Three in Norway by Two of Them" by J. A. Lees and W. J. Clutterbuck</cite>
 <br>
 <br>
