Added The Magician's Nephew

--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -111,9 +111,15 @@ title: Stuff
 		<td valign="top">This is a random read from the "1001 books you should read before you die"-list, so I knew nothing about this book other than its title. I started reading, and from the start I really didn't like it. In fact, I actively disliked it. I found the first half of the book to be a muddled and messy blend of politics, social commentary, satire and attempts at humour. As standalone elements all of these would probably have held up, but the way in which they were blended together made the story confusing, really hard to read, and disagreeable to me. Considering how little was actually happening, it was baffling how hard it was to keep up with it. <br> Then everything changed. <br> The mood of the book changed drastically. The relatively lighthearted, almost superficial, story turned dark. It became intense, emotional and gripping. One passage in particular, which takes up most of the second half of the book, had me completely gripped. The situation isn't particularly dramatic, but the way in which it is recounted is extremely immersive. After reading it I felt like I'd been holding my breath for a few hours. A lot of time is spent describing a very sort passage of time, yet not a word is wasted. One of the characters is in an extremely fragile emotional state, and as they get closer and closer to the edge, I found myself dreading what would happen when they fell off it. But I had to know. I had to continue reading. Way past when I should have gone to sleep. <br> Concluding anything about this book is very difficult. Perhaps the start of the book was necessary for the rest of it to be so good. Maybe the contrast in mood and tone is what made the book have such an impact on me. I'm not sure whether I'd recommend it or not. I really, really didn't enjoy the first part of the book, and I'm finding it hard to describe how much I enjoyed the last part. Take from that what you will. 3.5/5 </td>
 		<td valign="top">19-08-12</td>
 	</tr>
+<tr>
+		<td valign="top">15</td>
+		<td valign="top">C. S. Lewis:<br>"The Magician's Nephew"</td>
+		<td valign="top">The chronological start of the Narnia-series, this story tells of how Narnia came to be. Having read the other books, it's quite fun reading about how it all started. This is a quick, cheerful, feel-good read. I quite enjoyed it, more so than a few of the other Narnia-books. 4/5 </td>
+		<td valign="top">26-08-12</td>
+	</tr>
 </table>
 <br> <br>
 And, to make sure I don't cheat myself with reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. Since I mostly read e-books, I'm basing these on page-counts from goodreads.com.<br>
-Total pages read: 5038 <br>
-Total books read: 14 <br>
-Average page-count: 360
+Total pages read: 5259 <br>
+Total books read: 15 <br>
+Average page-count: 351
