Cleaned up language a bit

--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -114,7 +114,7 @@ title: Stuff
 <tr>
 		<td valign="top">15</td>
 		<td valign="top">C. S. Lewis:<br>"The Magician's Nephew"</td>
-		<td valign="top">The chronological start of the Narnia-series, this story tells of how Narnia came to be. Having read the other books, it's quite fun reading about how it all started. This is a quick, cheerful, feel-good read. I quite enjoyed it, more so than a few of the other Narnia-books. 4/5 </td>
+		<td valign="top">The chronological beginning of the Narnia-series, this story tells of how Narnia came to be. Having read the other books, it's quite fun reading about how it all started. This is a quick, cheerful, feel-good read. I quite enjoyed it, more so than a few of the other Narnia-books. 4/5 </td>
 		<td valign="top">26-08-12</td>
 	</tr>
 </table>
