--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -91,13 +91,13 @@ title: Stuff
 		<td valign="top">11</td>
 		<td valign="top">Agatha Christie:<br>"The Mystery of the Blue Train"</td>
 		<td valign="top">Another Hercule Poirot story, and a relatively standard mystery. A woman gets killed. On a train of course. Who did it? The husband? The lover? The Butler? Who knows? Well, Poirot does. Not one of the best Christie's I've read, nor very original. Still, this book isn't bad. It continues to impress me how well Christie does dialogue. Even long-winded conversations between characters (of which there are quite a few in this book) somehow stay interesting and entertaining, yet plausible. I've come to expect that an Agatha Christie-book will keep me happy for the time it takes me to read it, and this one did. Just. 3.5/5 </td>
-		<td valign="top">29-07-12</td>
+		<td valign="top" style="background-color:#00FF00;">29-07-12</td>
 	</tr>
     	<tr>
 		<td valign="top">12</td>
 		<td valign="top">George R. R. Martin:<br>"A Game of Thrones"</td>
 		<td valign="top">Many people have heard about Game of Thrones by now. Most of them, myself included, probably wouldn't have unless HBO had made A Song of Ice and Fire into a tv-series. As everyone said the tv-series was great I gave it a try, but after a few episodes I didn't like it as much as everyone said I should. Then I was told that I would certainly like the books. I did. At least I've loved the first one.<br> Mr. Martin has really created a huge, rather complex, and truly impressive world in which the story takes place. Though, the most impressive thing is not the world itself, but how effortlessly and naturally I became immersed in it. I'm not quite sure how or when it happened, but after 150 pages I was engaged in the book, and couldn't wait to find out what happened next. And that's another thing which sets this book apart, there really isn't a way of knowing what happens next. It doesn't take long to realise that most of the regular tropes are thrown to the wind by this book, and once you acknowledge that anything could happen, it makes it all the more exciting to see which one of those anythings actually does happen.<br> Over almost a thousand pages I was never bored of this book. Even after hours of reading, I never didn't feel like reading the next chapter right away. Despite many sub-plots being dealt with at the same time, they never became hard to follow. I really enjoyed this book, and I would hereby like to berate all of my friends who've read it, and who haven't recommended it to me until now. 5/5 </td>
-		<td valign="top">05-08-12</td>
+		<td valign="top" style="background-color:#00FF00;">05-08-12</td>
 	</tr>
     	<tr>
 		<td valign="top">13</td>
@@ -117,9 +117,15 @@ title: Stuff
 		<td valign="top">The chronological beginning of the Narnia-series, this story tells of how Narnia came to be. Having read the other books, it's quite fun reading about how it all started. This is a quick, cheerful, feel-good read. I quite enjoyed it, more so than a few of the other Narnia-books. 4/5 </td>
 		<td valign="top">26-08-12</td>
 	</tr>
+<tr>
+		<td valign="top">16</td>
+		<td valign="top">Wilkie Collins:<br>"The Moonstone"</td>
+		<td valign="top">I tend to be slightly sceptical toward books that are considered classics, especially the ones written ages ago. I was therefore somewhat sceptical toward The Moonstone, a classic which is almost 150 years old. My scepticism was put well and truly to shame. The Moonstone is an original mystery, in every sense of the word, which is centred around a valuable diamond said to be cursed. The story is told in the form of statements written after the fact by some of the people involved in the story, recounting events as they observed them. This works extremely well. The differences in perspective adds an additional level to a story which is already great. The personality of the writers shines through in the narratives written by them, and some of the more personal observations and musings of the characters made me laugh out loud to the extent at which I got looks, on both an airplane and a train. I could go on about how great this book is, and how much I enjoyed it, but I won't. I'd just encourage you to read it. Unless you really don't like the mystery-genre, I think you'll enjoy this book. If you're lucky, you'll enjoy it as much as I did. 4.5/5 </td>
+		<td valign="top">2-09-12</td>
+	</tr>
 </table>
 <br> <br>
-And, to make sure I don't cheat myself with reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. Since I mostly read e-books, I'm basing these on page-counts from goodreads.com.<br>
-Total pages read: 5259 <br>
-Total books read: 15 <br>
-Average page-count: 351
+And, to make sure I don't cheat myself by reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. Since I mostly read e-books, I'm basing these on page-counts from goodreads.com.<br>
+Total pages read: 5787 <br>
+Total books read: 16 <br>
+Average page-count: 362
