--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -103,7 +103,7 @@ title: Stuff
 		<td valign="top">13</td>
 		<td valign="top">Tom Reynolds:<br>"Blood, Sweat and Tea"</td>
 		<td valign="top">Recommended by a friend, this was very much a random choice of reading material, and I am glad I chose it. It is a collection of blog-posts written by an employee of the London Ambulance Service. Through the posts, which are generally only a page or two long, the writer recounts regular, less regular, and rather irregular experiences he has had while on the job. Part of the reason I liked this book was the 'behind the scenes' look it gave at the ambulance service. If anything, it has reassured me that the Ambulance Service are dedicated people who know what they are doing, will help in the best way they can, and will, most of the time, provide an excellent service. On the flip-side, large parts of this book are also very scary, disturbing, and incredibly dark to someone like me. While told in a factual, non-tabloid, manner, stories from real life about dead babies, heart attacks and crying relatives are never pleasant to read. Of course, the book also has its share of light-heartedness, and stories with happy endings. Overall I guess the book paints a picture of reality, with all the shades that go along with that. The book is very well written, rarely gets repetitive, and often got my heart beating faster as I wondered what the outcome of a particular 'job' was going to be. If you think you might like a book with real stories from an employee in the ambulance service, you will really like this book. If you don't, you might not. Either way, with a bit of Googling it is available (legally) as a free ebook, so you might as well give it a try. 4/5 </td>
-		<td valign="top">12-08-12</td>
+		<td valign="top" style="background-color:#00FF00;">12-08-12</td>
 	</tr>
     	<tr>
 		<td valign="top">14</td>
@@ -121,11 +121,17 @@ title: Stuff
 		<td valign="top">16</td>
 		<td valign="top">Wilkie Collins:<br>"The Moonstone"</td>
 		<td valign="top">I tend to be slightly sceptical toward books that are considered classics, especially the ones written ages ago. I was therefore somewhat sceptical toward The Moonstone, a classic which is almost 150 years old. My scepticism was put well and truly to shame. The Moonstone is an original mystery, in every sense of the word, which is centred around a valuable diamond said to be cursed. The story is told in the form of statements written after the fact by some of the people involved in the story, recounting events as they observed them. This works extremely well. The differences in perspective adds an additional level to a story which is already great. The personality of the writers shines through in the narratives written by them, and some of the more personal observations and musings of the characters made me laugh out loud to the extent at which I got looks, on both an airplane and a train. I could go on about how great this book is, and how much I enjoyed it, but I won't. I'd just encourage you to read it. Unless you really don't like the mystery-genre, I think you'll enjoy this book. If you're lucky, you'll enjoy it as much as I did. 4.5/5 </td>
-		<td valign="top">2-09-12</td>
+		<td valign="top">02-09-12</td>
+	</tr>
+<tr>
+		<td valign="top">17</td>
+		<td valign="top">Knut Hamsun:<br>"Sult" (Published in English as "Hunger")</td>
+		<td valign="top">A Norwegian classic I finally got around to reading. The book is about a struggling writer who runs out of money and goes hungry. It didn't take me long to start feeling desperately sorry for this man. The really raw way in which his desperate hunger and, as a result, often miserable and sometimes deranged state of mind is described, made this book a very uncomfortable, but also a very thought-provoking read. Reading about the main character's unwillingness to ask for or accept charity out of pride and a sense of personal dignity genuinely frustrated me. I found myself urging the character to steal, rather than preserving his lawfulness at the risk of dying of hunger. Unfortunately, even though this book was published in 1890, it remains relevant. It will stay relevant as long as there are people who have to go hungry. Through telling a story it makes a very powerful point. No moral is stated, nor is any lecture given. It is just a story. A story which serves as a poignant reminder that no matter how uncomfortable one might be made to feel by that person sitting on the street, asking for ones money, one is extremely privileged to be the one being asked. 4/5 </td>
+		<td valign="top">09-09-12</td>
 	</tr>
 </table>
 <br> <br>
 And, to make sure I don't cheat myself by reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. Since I mostly read e-books, I'm basing these on page-counts from goodreads.com.<br>
-Total pages read: 5787 <br>
-Total books read: 16 <br>
-Average page-count: 362
+Total pages read: 5945 <br>
+Total books read: 17 <br>
+Average page-count: 350
