--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -135,9 +135,15 @@ title: Stuff
 		<td valign="top">I'm finding it hard to pin down this book. It seems like it is trying to be quite a few things, and while it doesn't directly fail at being any of them, it struggles in getting there with all of them. Firstly, the story is satirical. The characters in the book are clever, well-constructed caricatures. Some situations in the book are meant as obvious social commentary, and these are funny and well done. However, there aren't enough of them for this to be 400 pages of satire. Secondly, it is a thriller. Parts of the book are genuinely exciting and thrilling, and as the story twisted and threw itself up in the air, I found myself wondering how it would be brought back down to earth. It never quite was. I rarely knew where the story would go next, but eventually everything became a little too implausible for me to really care. Lastly, a few moral points are made. Helpfully or annoyingly, take your pick, you can rely on the characters to pretty much state the points the writer wants to get across, in case you hadn't picked them up yourself. Unfortunately, since I found myself unable to relate to anything at all happening after page 40, none of these points really made much of an impact beyond just being written down. <br> However, for some reason everything kind of works. I put this entirely down to Stephen Fry and his Stephen Fry'ness. This book has plenty and plenty of Stephen Fry'ness. It manages to be warm, clever and rather likable while also being dark, violent and twisted. Ultimately, I picked this book up because it was by Stephen Fry, and I figured it couldn't be that bad. And that's exactly what it was. Not great, but not that bad. 3.5/5 </td>
 		<td valign="top">16-09-12</td>
 	</tr>
+<tr>
+		<td valign="top">19</td>
+		<td valign="top">C.S. Lewis:<br>"The Last Battle"</td>
+		<td valign="top">It is impossible for me to be objective about this book. Obviously the end of the Narnia-series, and the conclusion to seven books of fantastic story-telling. I had goosebumps while reading about half of it, and I'm not even sure why. I don't care one bit that it might have been a little cheesy, cliched at times, and preachy. It was a moving, worthy and brilliant end to a great series. Not that it needs saying, but it's hard not to imagine that the Chronicles of Narnia will still be read and enjoyed for hundreds of years to come. 4/5 </td>
+		<td valign="top">23-09-12</td>
+	</tr>
 </table>
 <br> <br>
 And, to make sure I don't cheat myself by reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. Since I mostly read e-books, I'm basing these on page-counts from goodreads.com.<br>
-Total pages read: 6381 <br>
-Total books read: 18 <br>
-Average page-count: 355
+Total pages read: 6605 <br>
+Total books read: 19 <br>
+Average page-count: 348
