--- a/package/index.html
+++ b/package/index.html
@@ -1,3 +1,7 @@
+<html>
+<head>
+</head>
+<body>
 <script type="text/javascript">
 var _wf = _wf || {};
 
@@ -7,7 +11,7 @@ var _wf = _wf || {};
 _wf.blogUrl = 'package';
 
 // The ID of the element that you want to display the liveblog in. This can also be a HTML element reference or any other jQuery selector (which returns a single element).
-_wf.holder = '#liveblog';
+_wf.holder = 'body';
 
 // ===== ONLY MODIFY THE TWO VARIABLES ABOVE =====
 
@@ -19,3 +23,5 @@ _wf.blogBaseUrl = _wf.baseUrl + _wf.blogUrl + '/';
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wfs, s);
 })();
 </script>
+</body>
+</html>
